--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
   text-align: center;
+  width: 489px;
+height: 473px;
+border-radius: 30px 0px 0px 0px;
+opacity: 0px;
+box-shadow: 30px -20px 100px 10px #0057FF78;
+background: #FFFFFF;
+border-radius: 30px;
+margin: 171px 452px 0;
+
+}
+input{
+ justify-content: center;
+ border: 2px solid black;
+
+}
+button{
+  background-color: black;
+  color: #FFFFFF;
+
+}
+.container{
+ gap: 20px 50px;
+ display: grid;
+ padding: 20px 10px 30px 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
